--- a/ClassNotes/1.DevOpsIntroduction.md
+++ b/ClassNotes/1.DevOpsIntroduction.md
@@ -80,7 +80,7 @@
 - Security
 - Data Science
 
-SDLC
+Software Data Life Cycle (SDLC)
 Development ---> QA/Testing ---> Operations (Production)
 
 Dev --> test --> Staging (Pre-prod/UAT) --> Ops (Prod)
